--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h1 class="title">Rakesh Mishra</h1>
       <p class="section__text__p2">Software Engineer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/Rakesh Mishra resume 001.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/Rakesh Mishra resume 001.pdfs')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
